<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:title="Superhero Info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivSuperheroImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintBottom_toTopOf="@id/biographyCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/biographyCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/ivSuperheroImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvFullName"
                style="@style/SuperheroText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname" />

            <TextView
                android:id="@+id/tvFirstAppearance"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstappearance" />

            <TextView
                android:id="@+id/tvAlignment"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alignment" />"

            <TextView
                android:id="@+id/tvGroup"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group" />

            <TextView
                android:id="@+id/tvRelatives"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relatives" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/powerstatsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/biographyCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvPowerStats"
                style="@style/SuperheroText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerstats" />

            <TextView
                android:id="@+id/tvIntelligence"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligence" />

            <TextView
                android:id="@+id/tvStrength"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Strength" />

            <TextView
                android:id="@+id/tvDurability"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durability" />

            <TextView
                android:id="@+id/tvPower"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power" />

            <TextView
                android:id="@+id/tvSpeed"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/tvCombat"
                style="@style/SuperheroText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combat" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
